--- a/app/assets/stylesheets/layouts/_container.scss
+++ b/app/assets/stylesheets/layouts/_container.scss
@@ -5,7 +5,7 @@
   padding-left: var(--space-xs);
   margin-left: auto;
   margin-right: auto;
-  color: var(--color-primary);
+  // color: var(--color-primary);
   display: flex;
   flex-direction: column;
 
