--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -2,14 +2,11 @@
   display: inline-block;
   padding: var(--space-xxs) var(--space-m);
   border-radius: var(--border-radius);
-  background-origin: border-box; // Invisible borders with linear gradients
-  background-color: transparent;
   border: solid 2px transparent;
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
   outline: none;
-  transition: filter 400ms, color 200ms;
 
   &:hover,
   &:focus,
@@ -20,7 +17,7 @@
 
   &--primary {
     color: var(--color-white);
-    background-image: linear-gradient(to right, var(--color-primary), var(--color-primary-rotate));
+    background-color: var(--color-primary);
 
     &:hover,
     &:focus,
@@ -67,6 +64,18 @@
     &:focus-within,
     &:active {
       color: var(--color-white);
+    }
+  }
+
+  &--tertiary {
+    color: var(--color-dark);
+    background-color: var(--color-tertiary);
+
+    &:hover,
+    &:focus,
+    &:focus-within,
+    &:active {
+      filter: saturate(1.2) brightness(110%);
     }
   }
 }
