--- a/app/assets/stylesheets/config/_reset.scss
+++ b/app/assets/stylesheets/config/_reset.scss
@@ -22,7 +22,7 @@ body {
   background-color: var(--color-background);
   color: var(--color-text-body);
   line-height: var(--line-height-body);
-  font-family: var(--font-family-sans);
+  font-family: var(--font-family-cabin);
 }
 
 img,
@@ -47,6 +47,7 @@ h5,
 h6 {
   color: var(--color-text-header);
   line-height: var(--line-height-headers);
+  font-family: var(--font-family-sans);
 }
 
 h1 {
