--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -2,6 +2,7 @@
 :root {
   // Simple fonts
   --font-family-sans: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --font-family-cabin: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   // Classical line heights
   --line-height-headers: 1.1;
@@ -36,22 +37,22 @@
 
 
   // Application colors
-  --color-primary:          #1B6900;
+  --color-primary:          #2b9348;
   --color-primary-rotate:   #2b9348;
   --color-primary-bg:       hsl(0, 85%, 96%);
   --color-secondary:        hsl(101, 45%, 56%);
   --color-secondary-rotate: hsl(120, 45%, 56%);
-  --color-tertiary:         hsl(49, 89%, 64%);
+  --color-tertiary:         hsl(49, 100%, 53%);
   --color-glint:            hsl(210, 100%, 82%);
 
   // Neutral colors
   --color-white:      hsl(0, 0%, 100%);
-  --color-background: hsl(30, 50%, 98%);
+  --color-background: hsl(49, 47%, 95%);
   --color-light:      hsl(0, 6%, 93%);
   --color-dark:       var(--color-text-header);
 
   // Border radius
-  --border-radius: 0.375rem;
+  --border-radius: 0.75rem;
 
   // Border
   --border: solid 2px var(--color-light);
