--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -1,40 +1,7 @@
-.menu {
-  background-color:white;
-  display: flex;
-  flex-direction: row;
-}
-
-.menu__links {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  font-weight: bold;
-
-  p {margin-right: 1rem;
-  }
-
-  :hover {
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 4px;
-    text-decoration-color: var(--color-tertiary);
-  }
-}
-
-.menu__logo {
-  display: flex;
-  align-items: center;
-  margin-right: 2rem;
-
-  img {
-    width: 3rem;
-    transform: rotate(45deg);
-  }
-}
 
 .banner {
   width: 100%;
-  height: 80vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,37 +11,204 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
 
+  .banner__tagline {
+    font-size: 2rem;
+    color: var(--color-tertiary);
+    text-shadow: 1px 1px var(--color-text-header), -1px 1px var(--color-text-header), 1px -1px var(--color-text-header), -1px -1px var(--color-text-header);
+    width: 60%;
+    margin-bottom: var(--space-xl);
+    text-align: center;
+    font-weight: bold;
+  }
 
-.navbar ul {
-  display: flex;
-  margin: unset;
+  .banner__join-us {
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+  }
 }
 
 .title-container {
-  margin-top: 6rem;
+  margin-top: 4rem;
 }
 
-.title {
+
+.banner__title {
   color: white;
   font-size: 6rem;
-  background: linear-gradient(var(--color-primary), var(--color-primary-rotate), var(--color-tertiary));
-  background-clip: text;
-  -webkit-background-clip: text;
-  background-size: 200% 200%;
-  animation: gradient-text 5s ease infinite;
   text-align: center;
+  font-weight: bold;
+  -webkit-text-stroke: 2px var(--color-text-header);
 }
 
-.three-steps.container {
+
+.farmers {
+  margin-top: var(--space-xxxl);
+}
+
+.farmers__header {
+  display: flex;
+  justify-content: center;
+  margin-bottom: var(--space-s);
+
+  .farmers__title {
+    color: var(--color-primary);
+    -webkit-text-stroke: 2px var(--color-text-header);
+  }
+}
+
+
+.why-us {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: var(--space-xxxxl);
+}
+
+.why-us__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: var(--space-m);
+}
+
+.why-us .reasons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  // max-width: 45rem;
+}
+
+.reason-card {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 1rem;
+  background-color: white;
+  padding: 15px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: var(--border-radius);
+
+  i {
+    color: var(--color-text-body);
+    background-color: var(--color-secondary);
+    padding: 0.5rem;
+    border-radius: 50%;
+  }
+
+  h2 {
+    margin-top: var(--space-s);
+    margin-bottom: var(--space-xs);
+    text-decoration: underline;
+  }
+}
+
+.reason-card--yellow {
+  i {
+    background-color: var(--color-tertiary);
+  }
+
+  h2 {
+    text-decoration-color: var(--color-secondary);
+  }
+}
+
+.reason-card--green {
+  i {
+    background-color: var(--color-secondary);
+  }
+
+  h2 {
+    text-decoration-color: var(--color-tertiary);
+  }
+}
+
+.how-it-works {
+  margin-bottom: var(--space-xxxxl);
+}
+
+.how-it-works__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  p {
+    text-align: center;
+  }
+
+}
+
+
+.three-steps {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 20px;
+
+  h1 {
+    text-decoration: underline;
+    text-decoration-color: var(--color-tertiary);
+  }
 }
 
-.step {
+.card {
   text-align: center;
   padding: 20px;
-  border: 1px solid #ccc;
+}
+
+.card__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: var(--space-xs)
+}
+
+.card__circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 4rem;
+  height: 4rem;
+  background-color: var(--color-primary);
+  border-radius: 50%;
+  margin-bottom: var(--space-m);
+  // box-shadow: var(--color-tertiary) 2px 2px;
+}
+
+.farm-images {
+  margin-top: var(--space-m);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin-bottom: var(--space-xxxxl);
+
+  img {
+    width: 22rem;
+    border-radius: 5%;
+  }
+}
+
+.join {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: var(--space-l);
+
+  .join__tagline {
+    margin-top: var(--space-m);
+    margin-bottom: var(--space-s);
+    font-size: var(--font-size-xl);
+  }
+}
+
+.workers__header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    color: var(--color-tertiary);
+    -webkit-text-stroke: 2px var(--color-text-header);
+  }
 }
