Added Stimulus controller 'SectionController' to toggle visibility of farmers and contractors sections.
Implemented functionality to toggle between displaying the farmers section and contractors section based on button clicks. Clicking on the 'Farmers' button now displays only the farmers section, while clicking on the 'Agri Contractor' button hides the farmers section and displays the contractors section.

--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -43,6 +43,12 @@
 }
 
 
+.tab-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .farmers {
   margin-top: var(--space-xxxl);
 }
@@ -211,4 +217,8 @@
     color: var(--color-tertiary);
     -webkit-text-stroke: 2px var(--color-text-header);
   }
+}
+
+.hidden {
+  display: none;
 }
