--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,8 +4,7 @@
   background-color:white;
   display: flex;
   justify-content: space-between;
-  // width: 100%;
-  // position: fixed;
+  position: relative;
 
   a:hover {
     text-decoration: underline;
@@ -27,6 +26,19 @@
   }
 }
 
+.navbar__options--mobile {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 102%;
+  right: 0;
+  background-color: var(--color-white);
+  padding: var(--space-m);
+  border-radius: 5px;
+  margin: 1px solid var(--color-text-muted);
+  font-weight: bold;
+}
+
 .navbar__logo {
   display: flex;
   align-items: center;
@@ -36,5 +48,12 @@
     width: 2.4rem;
     transform: rotate(45deg);
     border-radius: 50%;
+  }
+}
+
+.burger-button {
+  cursor: pointer;
+  @include media(tabletAndUp) {
+    display: none;
   }
 }
