--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -164,7 +164,7 @@
 
 
 
-  <section class="workers" id="contractors-section" data-section-target="contractorsSection">
+  <section class="workers hidden" id="contractors-section" data-section-target="contractorsSection">
     <div class="why-us container">
       <div class="why-us__header">
         <h1>WHY CHOOSE FARM MATCH?</h1>
