Add hamburger menu for smaller screen Links in navbar disappear on smaller screen and hamburger menu is toggled on. Add navbar stimulus controller to deal with toggling.

--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,5 +1,5 @@
 @mixin media($query) {
   @if $query == tabletAndUp {
-    @media (min-width: 930px) { @content; }
+    @media (min-width: 50rem) { @content; }
   }
 }
