--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -32,6 +32,35 @@
 
 
 <main data-controller="section">
+  <div class="why-us">
+    <div class="why-us__header">
+      <h2>WHY FARM MATCH?</h2>
+      <div>
+        <h4>FARMERS</h4>
+        <i class="fa-solid fa-circle-chevron-right"></i>
+      </div>
+    </div>
+    <div class="why-us__body">
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          Operating costs on Irish farms have increased dramatically in recent years.
+        </p>
+      </div>
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          The entire Irish agricultural sector has faced unprecedented labour shortages.
+        </p>
+      </div>
+      <div>
+        <i class="fa-regular fa-hand-point-right"></i>
+        <p>
+          Farm Match allows Farmers to post a job and receive quotations from interested peer reviewed Agri Contractors and Farm Workers.
+        </p>
+      </div>
+    </div>
+  </div>
 
   <div class="tab-options container">
     <button id="farmers" class="tab btn btn--primary btn--active" data-section-target="farmersButton" data-action="click->section#activateSection">Farmers</button>
@@ -40,9 +69,6 @@
 
   <section class="farmers" id="farmers-section" data-section-target="farmersSection">
     <div class="why-us container">
-      <div class="why-us__header">
-        <h1>WHY CHOOSE FARM MATCH?</h1>
-      </div>
 
       <div class="farmers__header">
         <h1 class="farmers__title">FARMERS</h1>
@@ -99,11 +125,7 @@
 
     <div class="how-it-works container">
       <div class="how-it-works__header">
-        <h1>HOW DOES IT WORK?</h1>
-        <p>
-          Operating costs on Irish farms have increased dramatically in recent years and the entire Irish agricultural sector has faced unprecedented labour shortages.
-          Farm Match allows Farmers to post a job and receive quotations from interested peer reviewed Agri Contractors and Farm Workers.
-        </p>
+        <h2>HOW DOES IT WORK?</h2>
       </div>
 
       <div class="three-steps">
@@ -166,9 +188,6 @@
 
   <section class="workers hidden" id="contractors-section" data-section-target="contractorsSection">
     <div class="why-us container">
-      <div class="why-us__header">
-        <h1>WHY CHOOSE FARM MATCH?</h1>
-      </div>
 
       <div class="workers__header">
         <h1 class="workers__title">AGRI CONTRACTORS </h1>
