--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -7,6 +7,7 @@
   text-decoration: none;
   cursor: pointer;
   outline: none;
+  box-shadow: 2px 2px var(--color-text-header);
 
   &:hover,
   &:focus,
