--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,14 @@
 
 .navbar {
-  padding: 1rem 2rem;
+  padding: .75rem .75rem .75rem .5rem;
   background-color:white;
   display: flex;
   justify-content: space-between;
   position: relative;
+
+  @include media(tabletAndUp) {
+    padding: 1rem 2rem;
+  }
 
   a:hover {
     text-decoration: underline;
@@ -53,6 +57,10 @@
 
 .burger-button {
   cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  align-self: center;
+
   @include media(tabletAndUp) {
     display: none;
   }
