Add notice for registering interest Add pop up message thanking potential users and confirming registration.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
 // Components
 @import "components/btn";
 @import "components/navbar";
+@import "components/flash";
 
 // Layouts
 @import "layouts/container";
