--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -2,9 +2,9 @@
   <div class="notice notice-info" data-controller="close-notice">
     <h2> <%= notice["title"] %> </h2>
     <p> <%= notice["message"] %></p>
-    <button type="button" class="btn-close" data-action="click->close-notice#close">
-      x
-    </button>
+    <div class="btn-close" data-action="click->close-notice#close">
+     <i class="fa-regular fa-rectangle-xmark"></i>
+    </div>
   </div>
 <% end %>
 <% if alert %>
