--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,9 +11,11 @@
 @import "components/btn";
 @import "components/navbar";
 @import "components/flash";
+@import "components/form";
 
 // Layouts
 @import "layouts/container";
 
 // Pages
 @import "pages/welcome";
+@import "pages/register";
