--- a/app/views/potential_users/register.html.erb
+++ b/app/views/potential_users/register.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
-
-  <h1>Register</h1>
-
-  <%= render "shared/new" %>
-
+  <div class="form-container">
+    <h1>Register your interest</h1>
+    <%= render "shared/new" %>
+  </div>
 </div>
