--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "components/navbar";
 @import "components/flash";
 @import "components/form";
+@import "components/separators";
 
 // Layouts
 @import "layouts/container";
