--- a/app/assets/stylesheets/pages/_welcome.scss
+++ b/app/assets/stylesheets/pages/_welcome.scss
@@ -81,11 +81,12 @@
   flex-direction: column;
   align-items: center;
   margin: auto;
-  margin-bottom: var(--space-xxl);
   margin-top: var(--space-m);
+  // margin-bottom: var(--space-m);
 
   @include media(tabletAndUp) {
     margin-top: var(--space-xxxl);
+    // margin-bottom: var(--space-xxxl);
     width: 60%;
 
     h2 {
@@ -141,11 +142,11 @@
   flex-direction: column;
   align-items: center;
   margin: auto;
-  margin-top: var(--space-m);
+  // margin-top: var(--space-m);
   margin-bottom: var(--space-m);
 
   @include media(tabletAndUp) {
-    margin-top: var(--space-xxxl);
+    // margin-top: var(--space-xxxl);
 
     h2 {
       font-size: var(--font-size-xxxl);
@@ -154,6 +155,8 @@
 }
 
 .why-and-how-header {
+  margin-bottom: var(--space-m);
+
   div {
     display: flex;
     flex-direction: column;
@@ -166,23 +169,43 @@
     padding: var(--space-xxxs) var(--space-xs);
     border-radius: var(--border-radius);
     margin-right: var(--space-xxs);
-    color: var(--color-white);
+    color: var(--color-text-header);
     text-align: center;
   }
 
   .chevrons {
     flex-direction: row;
     justify-content: center;
+    margin-top: var(--space-xs);
   }
 }
+
+.chevrons .fa-solid {
+  font-size: var(--font-size-xxl);
+  margin-right: var(--space-xxxs);
+  margin-left: var(--space-xxxs);
+  cursor: pointer;
+}
+
 
 .reasons {
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  margin-bottom: var(--space-xxl);
-  // max-width: 45rem;
+  margin-bottom: -.4rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+#why-farmers {
+  background-color: var(--color-primary);
+  border-radius: var(--border-radius);
+}
+
+#why-contractors {
+  background-color: var(--color-tertiary);
+  border-radius: var(--border-radius);
 }
 
 .reason-card {
@@ -210,7 +233,7 @@
   }
 }
 
-.reason-card--yellow {
+.reason-card--farmers {
   i {
     background-color: var(--color-tertiary);
   }
@@ -220,13 +243,13 @@
   }
 }
 
-.reason-card--green {
+.reason-card--contractors {
   i {
-    background-color: var(--color-secondary);
+    background-color: var(--color-tertiary);
   }
 
   h2 {
-    text-decoration-color: var(--color-tertiary);
+    text-decoration-color: var(--color-secondary);
   }
 }
 
@@ -287,11 +310,11 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  margin-bottom: var(--space-xxxxl);
 
   img {
-    width: 22rem;
-    border-radius: 5%;
+    width: 18rem;
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
   }
 }
 
@@ -299,7 +322,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: var(--space-s);
+  margin-top: var(--space-l);
 
   .join__tagline {
     margin-top: var(--space-m);
