--- a/app/views/potential_users/register.html.erb
+++ b/app/views/potential_users/register.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="form-container">
-    <h1>Register your interest</h1>
+    <h1>Register your interest!</h1>
     <%= render "shared/new" %>
   </div>
 </div>
