Add devise and create potential_users page Add devise gem Create potential_users route and page, which requires log in Prevent users from registering by removing :registerable from user model Style log in form

--- a/app/assets/stylesheets/pages/_register.scss
+++ b/app/assets/stylesheets/pages/_register.scss
@@ -7,5 +7,6 @@
     margin-bottom: var(--space-m);
     text-decoration: underline;
     text-decoration-color: var(--color-primary);
+    text-align: center;
   }
 }
