--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,10 +1,30 @@
 
+.form-container {
+  margin-top: 5%;
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    margin-bottom: var(--space-m);
+    text-decoration: underline;
+    text-decoration-color: var(--color-primary);
+    text-align: center;
+  }
+}
+
 .form {
   padding: 1rem;
   background-color: white;
   box-shadow: 4px 2px rgba(0,0,0,0.2);
   border-radius: var(--border-radius);
   border: 1px solid rgb(194, 194, 194);
+  margin-bottom: var(--space-m);
+
+  @include media(tabletAndUp) {
+    min-width: 25rem;
+  }
 
   .form-field {
     display: block;
